# DicoNipon_api

./: .gitignore  00init.sql  DEV.env  Pipfile  README.md  pyproject.toml  run-dev.py
api/: app.py
api/dao/: __init__.py  dao_categorie.py  dao_mot.py  dao_mot_categorie.py
api/endpoints/: __init__.py  endpoint_categorie.py  endpoint_mot.py  endpoint_mot_categorie.py
sql/: 00init.sql  01peuplement.sql
